--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -100,7 +100,7 @@ Items can be selected, and depending on the page, different options may be appli
 
 <CollectionSelector @ref="@cs" SelectedItems="SelectedItems" Rerender="@StateHasChanged"/>
 
-<CtrlGInput @ref="@CtrlGInput" StartDateChanged="@StartDateChanged"/>
+<CtrlGInput @ref="@CtrlGInput" LCV="@this" StartDateChanged="@StartDateChanged"/>
 
 <TwoChoiceInput @ref="@starPrompt" YesBtnIcon="star" YesBtnText="Add" NoBtnIcon="star_outline" NoBtnText="Remove" YesBtnClick="@(() => UpdateStars(true))" NoBtnClick="@(() => UpdateStars(false))" Message="@(SelectedItems.Count > 1 ? "Add or remove stars for selected items?" : "Add or remove star for selected item?")"/>
 <TwoChoiceInput @ref="@deletePrompt" YesBtnClick="@DeleteSelected" NoBtnClick="@(() => deletePrompt.Disable())" Message="@DeletePromptMessage"/>
