Add CtrlShiftA Action to KeyboardShortcuts

--- a/MemoryMosaic/Shared/KeyboardShortcuts.razor
+++ b/MemoryMosaic/Shared/KeyboardShortcuts.razor
@@ -26,6 +26,9 @@
 	public Action? CtrlA { get; set; }
 	
 	[Parameter]
+	public Action? CtrlShiftA { get; set; }
+
+	[Parameter]
 	public Action? CtrlS { get; set; }
 
 	[Parameter]
@@ -86,6 +89,7 @@
 		if (Left != null) HotKeysContext.Add(ModKeys.None, Keys.Left, Left);
 		if (Right != null) HotKeysContext.Add(ModKeys.None, Keys.Right, Right);
 		if (CtrlA != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.A, CtrlA);
+		if (CtrlShiftA != null) HotKeysContext.Add(ModKeys.Ctrl | ModKeys.Shift, Keys.A, CtrlShiftA);
 		if (CtrlS != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.S, CtrlS);
 		if (CtrlO != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.O, CtrlO);
 		if (CtrlD != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.D, CtrlD);
