--- a/MemoryMosaic/Pages/Memories.razor
+++ b/MemoryMosaic/Pages/Memories.razor
@@ -64,12 +64,12 @@
 @* 					<div id="collectionsIn"> *@
 @* 						@foreach (Collection collection in collectionsIn) *@
 @* 						{ *@
-@* 							<a href="/collection-view/@collection.id"> *@
+@* 							<a href="/collection-view/@collection.Id"> *@
 @* 								<div class="collection"> *@
 @* 									<div class="coverDiv"> *@
-@* 										<img class="cover" src="mm_library/@collection.cover" alt=""> *@
+@* 										<img class="cover" src="mm_library/@collection.Cover" alt=""> *@
 @* 									</div> *@
-@* 									<span title="@collection.name">@collection.name</span> *@
+@* 									<span title="@collection.Name">@collection.Name</span> *@
 @* 								</div> *@
 @* 							</a> *@
 @* 						} *@
