--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -72,7 +72,7 @@
             return;
         }
         
-        if (Collections.Select(c => c.name).Contains(NewCollectionName))
+        if (Collections.Select(c => c.Name).Contains(NewCollectionName))
         {
             ErrorIconTitle = "Collection Name in Use";
             return;
