--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -37,17 +37,17 @@
             <div>
                 @for (int i = 0; i < albums.Count; i++)
                 {
-                    if (!String.IsNullOrWhiteSpace(searchText) && albums[i].name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
+                    if (!String.IsNullOrWhiteSpace(searchText) && albums[i].Name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
 
                     int ii = i;
                     <div class="collection" @onclick="@(() => AlbumClicked(ii))">
                         <div class="cover">
-                            @if (!String.IsNullOrWhiteSpace(albums[i].cover))
+                            @if (!String.IsNullOrWhiteSpace(albums[i].Cover))
                             {
-                                <img src="mm_library/@albums[i].cover" alt=""/>
+                                <img src="mm_library/@albums[i].Cover" alt=""/>
                             }
                         </div>
-                        <Checkbox @bind-Input="@checkedAlbums[ii]" Label="@albums[i].name"/>
+                        <Checkbox @bind-Input="@checkedAlbums[ii]" Label="@albums[i].Name"/>
                     </div>
                 }
             </div>
@@ -56,18 +56,18 @@
             <div>
                 @for (int i = 0; i < folders.Count; i++)
                 {
-                    if (!String.IsNullOrWhiteSpace(searchText) && folders[i].name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
+                    if (!String.IsNullOrWhiteSpace(searchText) && folders[i].Name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
 
                     int ii = i;
                     <div class="collection" @onclick="@(() => FolderClicked(ii))">
                         <div class="cover">
-                            @if (!String.IsNullOrWhiteSpace(folders[i].cover))
+                            @if (!String.IsNullOrWhiteSpace(folders[i].Cover))
                             {
-                                <img src="mm_library/@folders[i].cover" alt=""/>
+                                <img src="mm_library/@folders[i].Cover" alt=""/>
                             }
                         </div>
 
-                        <Checkbox @bind-Input="@checkedFolders[ii]" Label="@folders[i].name"/>
+                        <Checkbox @bind-Input="@checkedFolders[ii]" Label="@folders[i].Name"/>
                     </div>
                 }
             </div>
@@ -152,14 +152,14 @@
 
         await InvokeAsync(StateHasChanged); //https://stackoverflow.com/questions/56477829/how-to-fix-the-current-thread-is-not-associated-with-the-renderers-synchroniza
 
-        int newestAlbumIndex = albums.FindIndex(a => a.name == collectionCreator.NewCollectionName);
+        int newestAlbumIndex = albums.FindIndex(a => a.Name == collectionCreator.NewCollectionName);
         if (newestAlbumIndex != -1)
         {
             checkedAlbums[newestAlbumIndex] = true;
         }
         else
         {
-            int newestFolderIndex = folders.FindIndex(f => f.name == collectionCreator.NewCollectionName);
+            int newestFolderIndex = folders.FindIndex(f => f.Name == collectionCreator.NewCollectionName);
             if (newestFolderIndex == -1) return;
             checkedFolderIndex = newestFolderIndex;
             checkedFolders[newestFolderIndex] = true;
@@ -179,12 +179,12 @@
             {
                 if (SelectedItem != Guid.Empty)
                 {
-                    await C.AddToCollectionAsync(SelectedItem, folders[checkedFolderIndex].id);
+                    await C.AddToCollectionAsync(SelectedItem, folders[checkedFolderIndex].Id);
                 }
                 else
                 {
                     foreach (Guid item in SelectedItems)
-                        await C.AddToCollectionAsync(item, folders[checkedFolderIndex].id);
+                        await C.AddToCollectionAsync(item, folders[checkedFolderIndex].Id);
                 }
             }
             else //Adding to album(s).
@@ -195,12 +195,12 @@
 
                     if (SelectedItem != Guid.Empty)
                     {
-                        await C.AddToCollectionAsync(SelectedItem, albums[c].id);
+                        await C.AddToCollectionAsync(SelectedItem, albums[c].Id);
                     }
                     else
                     {
                         foreach (Guid item in SelectedItems)
-                            await C.AddToCollectionAsync(item, albums[c].id);
+                            await C.AddToCollectionAsync(item, albums[c].Id);
                     }
                 }
             }
@@ -268,14 +268,14 @@
         void SaveSelectionToDisk()
         {
             if (checkedFolders.Any(b => b))
-                File.WriteAllText(filePath, $"F\n{folders[checkedFolderIndex].id}");
+                File.WriteAllText(filePath, $"F\n{folders[checkedFolderIndex].Id}");
             else
             {
                 File.WriteAllText(filePath, "A\n");
                 for (int i = 0; i < checkedAlbums.Count; i++)
                 {
                     if (checkedAlbums[i])
-                        File.AppendAllText(filePath, $"{albums[i].id}\n");
+                        File.AppendAllText(filePath, $"{albums[i].Id}\n");
                 }
             }
         }
@@ -285,7 +285,7 @@
         {
             int parsedID = Int32.Parse(albumID);
             for (int i = 0; i < checkedList.Count; i++)
-                if (collections[i].id == parsedID)
+                if (collections[i].Id == parsedID)
                     return i;
             
             return -1;
