--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -51,7 +51,7 @@ Items can be selected, and depending on the page, different options may be appli
 		if (GroupBy == GroupBy.None)
 		{
 			<div class="ungrouped">
-				@foreach (MediaRow item in Content)
+				@foreach (Models.LibraryItem item in Content)
 				{
 					<Thumbnail @key="@item" Item="@item" Parent="@this" Index="@index" OnClick="@OnThumbnailClick"/>
 					index++;
@@ -62,7 +62,7 @@ Items can be selected, and depending on the page, different options may be appli
 		{
 			foreach (var group in Content.GroupBy(GroupByFunction))
 			{
-				string date = FormatDateTaken(OrderByFields.First() == "date_taken" ? group.First().dateTaken : group.First().dateAdded);
+				string date = FormatDateTaken(OrderByFields.First() == "date_taken" ? group.First().DateTaken : group.First().DateAdded);
 				<div class="group">
 					@if (group.Count() > 1)
 					{
@@ -72,7 +72,7 @@ Items can be selected, and depending on the page, different options may be appli
 
 						for (int i = start; i <= end; i++)
 						{
-							if (!SelectedItems.Contains(Content[i].uuid))
+							if (!SelectedItems.Contains(Content[i].Id))
 							{
 								selectThisGroup = true;
 								break;
@@ -85,7 +85,7 @@ Items can be selected, and depending on the page, different options may be appli
 						<span>@date</span>
 					}
 					<div class="thumbnails">
-						@foreach (MediaRow item in group)
+						@foreach (Models.LibraryItem item in group)
 						{
 							<Thumbnail @key="@item" Item="@item" Parent="@this" Index="@index" OnClick="@OnThumbnailClick"/>
 							index++;
@@ -139,7 +139,8 @@ Items can be selected, and depending on the page, different options may be appli
 	[Parameter]
 	public bool SortDesc { get; set; } = true;
 	
-	public List<MediaRow> Content { get; private set; } = new(600);
+	//TODO: adjust these after Models.LibraryItem.razor is updated and renamed.
+	public List<Models.LibraryItem> Content { get; private set; } = new(600);
 	
 	public CtrlGInput CtrlGInput { get; private set; } = new();
 
@@ -179,14 +180,14 @@ Items can be selected, and depending on the page, different options may be appli
 		}
 	}
 
-	private Func<MediaRow, dynamic?> GroupByFunction => (GroupBy, OrderByFields.First()) switch
+	private Func<Models.LibraryItem, dynamic?> GroupByFunction => (GroupBy, OrderByFields.First()) switch
 	{
-		(GroupBy.None or GroupBy.Day, "date_taken") => row => row.dateTaken?.Date,
-		(GroupBy.None or GroupBy.Day, "date_added") => row => row.dateAdded.Date,
-		(GroupBy.Month, "date_taken") => row => new {row.dateTaken?.Month, row.dateTaken?.Year},
-		(GroupBy.Month, "date_added") => row => new {row.dateAdded.Month, row.dateAdded.Year},
-		(GroupBy.Year, "date_taken") => row => row.dateTaken?.Year,
-		(GroupBy.Year, "date_added") => row => row.dateAdded.Year,
+		(GroupBy.None or GroupBy.Day, "date_taken") => row => row.DateTaken?.Date,
+		(GroupBy.None or GroupBy.Day, "date_added") => row => row.DateAdded.Date,
+		(GroupBy.Month, "date_taken") => row => new {row.DateTaken?.Month, row.DateTaken?.Year},
+		(GroupBy.Month, "date_added") => row => new {row.DateAdded.Month, row.DateAdded.Year},
+		(GroupBy.Year, "date_taken") => row => row.DateTaken?.Year,
+		(GroupBy.Year, "date_added") => row => row.DateAdded.Year,
 		_ => throw new ArgumentOutOfRangeException()
 	};
 }
@@ -278,9 +279,9 @@ Items can be selected, and depending on the page, different options may be appli
 		for (int i = startIndex; i != endIndex + increment; i += increment)
 		{
 			if (select)
-				SelectedItems.Add(Content[i].uuid);
+				SelectedItems.Add(Content[i].Id);
 			else
-				SelectedItems.Remove(Content[i].uuid);
+				SelectedItems.Remove(Content[i].Id);
 		}
 
 		StateHasChanged();
@@ -288,8 +289,8 @@ Items can be selected, and depending on the page, different options may be appli
 
 	private void SelectAllLoadedItems()
 	{
-		foreach (MediaRow row in Content)
-			SelectedItems.Add(row.uuid);
+		foreach (Models.LibraryItem row in Content)
+			SelectedItems.Add(row.Id);
 		StateHasChanged();
 	}
 
@@ -320,8 +321,8 @@ Items can be selected, and depending on the page, different options may be appli
 		C.UpdateStarred(SelectedItems, starred);
 		starPrompt.Disable();
 		
-		foreach (MediaRow item in Content.Where(item => SelectedItems.Contains(item.uuid)))
-			item.starred = starred;
+		foreach (Models.LibraryItem item in Content.Where(item => SelectedItems.Contains(item.Id)))
+			item.Starred = starred;
 
 		ClearChecks();
 	}
@@ -341,7 +342,7 @@ Items can be selected, and depending on the page, different options may be appli
 		else
 			C.RestoreItems(SelectedItems);
 
-		Content.RemoveAll(item => SelectedItems.Contains(item.uuid));
+		Content.RemoveAll(item => SelectedItems.Contains(item.Id));
 		SelectedItems.Clear();
 		restorePrompt.Disable();
 		StateHasChanged();
@@ -369,7 +370,7 @@ Items can be selected, and depending on the page, different options may be appli
 			C.MoveToTrash(SelectedItems);
 		}
 		
-		Content.RemoveAll(item => SelectedItems.Contains(item.uuid));
+		Content.RemoveAll(item => SelectedItems.Contains(item.Id));
 		SelectedItems.Clear();
 		deletePrompt.Disable();
 		StateHasChanged();
@@ -387,10 +388,10 @@ Items can be selected, and depending on the page, different options may be appli
 		string zipFolderPath = Path.Combine(S.tmpFolderPath, $"Download {Guid.NewGuid()}");
 		Directory.CreateDirectory(zipFolderPath);
 
-		foreach (MediaRow media in Content)
+		foreach (Models.LibraryItem media in Content)
 		{
-			if (!SelectedItems.Contains(media.uuid)) continue;
-			string shortPath = media.path;
+			if (!SelectedItems.Contains(media.Id)) continue;
+			string shortPath = media.Path;
 			string fullPath = Path.Combine(S.libFolderPath, shortPath);
 			string destPath = Path.Combine(zipFolderPath, Path.GetFileName(shortPath));
 			File.Copy(fullPath, destPath);
