--- a/MemoryMosaic/Pages/Maintenance/Backups.razor
+++ b/MemoryMosaic/Pages/Maintenance/Backups.razor
@@ -76,10 +76,10 @@
         Directory.CreateDirectory(backupFolder);
         Parallel.ForEach(C.LoadEntireMediaTable(), row =>
         {
-            string srcFilePath = Path.Join(S.libFolderPath, row.path);
-            string destFilePath = Path.Join(backupFolder, row.path);
+            string srcFilePath = Path.Join(S.libFolderPath, row.Path);
+            string destFilePath = Path.Join(backupFolder, row.Path);
 
-            string dtFolderFull = Path.Combine(backupFolder, Path.GetDirectoryName(row.path)!);
+            string dtFolderFull = Path.Combine(backupFolder, Path.GetDirectoryName(row.Path)!);
             if (!Directory.Exists(dtFolderFull))
                 Directory.CreateDirectory(dtFolderFull);
             
