--- a/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
@@ -8,7 +8,7 @@
 </header>
 
 <main>
-    @foreach (Models.LibraryItem item in mediaMissingItems)
+    @foreach (LibraryItem item in mediaMissingItems)
     {
         <div class="missingItem">
             <div class="thumbnail"><img src="data:image/jpg;base64,@item.Thumbnail" alt=""></div>
@@ -25,7 +25,7 @@
 </main>
 
 @code {
-    private readonly List<Models.LibraryItem> mediaMissingItems = M.GetMediaMissingFiles();
+    private readonly List<LibraryItem> mediaMissingItems = M.GetMediaMissingFiles();
 
     private void DeleteMissingPaths()
     {
