--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -179,7 +179,7 @@
     private List<string>? emptyFolders;
     
     //Missing files
-    private List<Models.LibraryItem>? mediaMissingFiles;
+    private List<LibraryItem>? mediaMissingFiles;
     
     //Stats
     private bool statsLoaded;
@@ -187,7 +187,7 @@
     private long totalUsableDriveSize; //How much space the drive mm_library is on could have. E.g., on a 1 TB drive it returns ~930 GB. The rest is probably reserved for the OS.
     private long freeDriveSpace; //Bytes
     private long librarySize; //Bytes
-    private Models.LibraryItem? oldestDTItem, newestDTItem, oldestDAItem, newestDAItem;
+    private LibraryItem? oldestDTItem, newestDTItem, oldestDAItem, newestDAItem;
     public static DateTime whenWentOnline;
     
     //Debug
@@ -256,7 +256,7 @@
         amountUpdated = amountToUpdate = 0;
         thumbnailProgress.Enable();
 
-        List<Models.LibraryItem> allItems = C.LoadEntireMediaTable();
+        List<LibraryItem> allItems = C.LoadEntireMediaTable();
         amountToUpdate = allItems.Count;
 
         await Parallel.ForEachAsync(allItems, async (item, _) =>
