--- a/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
@@ -7,7 +7,7 @@
 
 @code {
 	[Parameter, EditorRequired]
-	public required Models.LibraryItem Item { get; set; }
+	public required LibraryItem Item { get; set; }
 	
 	[Parameter, EditorRequired]
 	public required LibraryContentViewer Parent { get; set; }
